kgateway/example/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
    - name: example
      namespace: kgateway-system
  hostnames:
    - "example.k8s.doblerones.de"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
